--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,13 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "5.5.*",
-        "squizlabs/php_codesniffer": "^2.7"
+        "phpunit/phpunit": "8.*",
+        "squizlabs/php_codesniffer": "3.*"
+    },
+    "scripts": {
+        "test": [
+            "./vendor/bin/phpcs --standard=psr2 src",
+            "./vendor/bin/phpunit"
+        ]
     }
 }
