--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "name": "jjgrainger/collection",
-    "version": "1.1",
     "description": "Simple collections in PHP",
     "homepage": "https://github.com/jjgrainger/collection",
     "license": "MIT",
@@ -11,9 +10,8 @@
             "homepage": "http://jjgrainger.co.uk"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-        "php": ">=7.2"
+        "php": "^8.2"
     },
     "autoload": {
         "psr-4": {
@@ -21,13 +19,13 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "8.*",
-        "squizlabs/php_codesniffer": "3.*"
+        "phpunit/phpunit": "^12.5",
+        "squizlabs/php_codesniffer": "^4.0",
+        "phpstan/phpstan": "^2.1"
     },
     "scripts": {
-        "test": [
-            "./vendor/bin/phpcs --standard=psr2 src",
-            "./vendor/bin/phpunit"
-        ]
+        "phpcs": "./vendor/bin/phpcs --standard=psr2 src",
+        "phpunit": "./vendor/bin/phpunit",
+        "phpstan": "phpstan analyse src"
     }
 }
