--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "scripts": {
         "phpcs": "./vendor/bin/phpcs --standard=psr2 src",
         "phpunit": "./vendor/bin/phpunit",
+        "phpunit:coverage": "./vendor/bin/phpunit --coverage-clover=coverage.xml",
         "phpstan": "phpstan analyse src"
     }
 }
